# meta-dataset

./: .gitmodules  Dockerfile  dataset_conversion.sh  pyproject.toml
meta_dataset/data/: pipeline.py
meta_dataset/simclr/: data_util.py
